--- a/config/config.ini
+++ b/config/config.ini
@@ -14,7 +14,7 @@ id = "scss,.svn,.sass-cache,javascripts"
 // choose if these services should be loaded in the nav and their ports
 autoReloadNav  = "true"
 autoReloadPort = "8882"
-pageFollowNav  = "true"
+pageFollowNav  = "false"
 pageFollowPort = "8883"
 
 // whether the qr code generator should be loaded automatically in the nav
