fixed overlay-dark-gray issue

--- a/gulp.config.local.example.json
+++ b/gulp.config.local.example.json
@@ -1,10 +1,10 @@
 {
     "projects": {
         "src": ["./public/css/**/*", "./public/js/**/*", "./public/fonts/**/*", "./public/images/**/*" ],
-        "dest": ["d:/git/doitsbu/docroot/sites/all/libraries/unity-lab/latest", "d:/testing"],
+        "dest": ["d:/git/unity-site/themes/unity/latest"],
         "base": "./public"
     },
     "project": {
-        "dest": "d:/testing"
+        "dest": "d:/git/unity-site/themes/unity/latest"
     }
 }
