--- a/gulp.config.local.example.json
+++ b/gulp.config.local.example.json
@@ -5,6 +5,6 @@
         "base": "./public"
     },
     "project": {
-        "dest": "d:/git/unity-site/themes/unity/latest"
+        "dest": ""
     }
 }
