[Prerelease] Bumped version number

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unity-lab",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "dependencies": {
     "gulp-jshint-html-reporter": "^0.1.2"
   },
@@ -14,6 +14,7 @@
     "gulp-compass": "^2.0.3",
     "gulp-concat": "^2.5.2",
     "gulp-directory-map": "^0.1.1",
+    "gulp-git": "^1.7.2",
     "gulp-jshint": "^1.9.2",
     "gulp-jshint-html-reporter": "^0.1.2",
     "gulp-minify-css": "^1.0.0",
