--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-todo": "^2.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
+    "gulp-zip": "^3.2.0",
     "lodash.template": "^3.3.2",
     "run-sequence": "^1.2.1",
     "through2": "^0.6.3",
