made placeholders/image references relative instead of tied to root

--- a/gulp.config.local.example.json
+++ b/gulp.config.local.example.json
@@ -1,10 +1,7 @@
 {
     "projects": {
         "src": ["./public/css/**/*", "./public/js/**/*", "./public/fonts/**/*", "./public/images/**/*" ],
-        "dest": ["d:/git/unity-site/themes/unity/latest"],
+        "dest": [""],
         "base": "./public"
-    },
-    "project": {
-        "dest": ""
     }
 }
