--- a/source/web.config
+++ b/source/web.config
@@ -2,6 +2,9 @@
 <configuration>
     <system.webServer>
         <handlers>
+            <remove name="SSI-htm" />
+            <remove name="SSINC-htm" />
+            <remove name="SSINC-html" />
             <add name="SSI-htm" path="*.htm" verb="*" modules="ServerSideIncludeModule" resourceType="Unspecified" />
             <add name="SSINC-html" path="*.html" verb="*" modules="ServerSideIncludeModule" resourceType="File" requireAccess="Script" />
 
@@ -14,6 +17,7 @@
 
       <httpProtocol>
         <customHeaders>
+        <remove name="Access-Control-Allow-Origin" />
           <add name="Access-Control-Allow-Origin" value="*" />
         </customHeaders>
       </httpProtocol>
