--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-util": "^3.0.4",
     "gulp-zip": "^3.2.0",
     "lodash.template": "^3.3.2",
+    "node-sass": "^3.10.1",
     "run-sequence": "^1.2.1",
     "through2": "^0.6.3",
     "yargs": "^4.7.1"
