--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unity-lab",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "dependencies": {
     "gulp-jshint-html-reporter": "^0.1.2"
   },
@@ -11,13 +11,12 @@
     "gulp-bless": "^3.0.1",
     "gulp-bump": "^2.1.0",
     "gulp-clean": "^0.3.1",
+    "gulp-clean-css": "^2.0.13",
     "gulp-compass": "^2.0.3",
     "gulp-concat": "^2.5.2",
-    "gulp-directory-map": "^0.1.1",
     "gulp-git": "^1.7.2",
     "gulp-jshint": "^1.9.2",
     "gulp-jshint-html-reporter": "^0.1.2",
-    "gulp-minify-css": "^1.0.0",
     "gulp-mq-remove": "0.0.2",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
